<resources>
    <string name="app_name">AutoSimulation</string>
    <string name="tab_text_1">Tab 1</string>
    <string name="tab_text_2">Tab 2</string>
    <string name="show_data">Show Data</string>
    <string name="no_data" />
    <string name="noData">No data!</string>
    <string name="login">LOGIN</string>
    <string name="car_image">Image shows car.</string>
    <string name="car_name">Name of the car.</string>
    <string name="car_desc">Speed of the car.</string>
    <string name="start_simulation">Start Simulation</string>
    <string name="switch_to_list">List</string>
    <string name="switch_to_console">Console</string>
</resources>