<?xml version="1.0" encoding="utf-8"?>
<LinearLayout  xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/linear_layout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="0"
        android:orientation="horizontal">
        <Button
            android:id="@+id/console_view"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="#88ffffff"
            android:text="@string/switch_to_console" />
        <Button
            android:id="@+id/list_view"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="#88ffffff"
            android:text="@string/switch_to_list" />
    </LinearLayout>


    <Button
        android:id="@+id/button_start_ride"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="#ffffff"
        android:layout_margin="20dp"
        android:text="@string/start_simulation" />

    <TextView
        android:id="@+id/usertext"
        android:layout_width="match_parent"
        android:layout_height="59dp"
        android:layout_weight="0" />



</LinearLayout>
