<?xml version="1.0" encoding="utf-8"?>

<androidx.cardview.widget.CardView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:layout_margin="5dp"
    android:clickable="true"
    android:focusable="true"
    app:cardCornerRadius="5dp"
    android:background="@null"
    app:cardBackgroundColor="@color/trans"
    >

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="5dp"
        android:background="@color/trans"
        >

        <ImageView
            android:id="@+id/car_image"
            android:layout_width="150dp"
            android:layout_height="95dp"
            android:contentDescription="@string/car_image"
            android:src="@mipmap/ic_launcher"/>

        <LinearLayout
            android:layout_width="170dp"
            android:layout_height="match_parent"
            android:layout_marginLeft="20dp"
            android:orientation="vertical">

            <TextView
                android:id="@+id/car_name"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="5dp"
                android:layout_marginTop="5dp"
                android:text="@string/car_name"
                android:textAppearance="@style/TextAppearance.AppCompat.Large"
                android:textIsSelectable="false" />

            <TextView
                android:id="@+id/car_desc"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="5dp"
                android:layout_marginTop="5dp"
                android:text="@string/car_desc"
                android:textAppearance="@style/TextAppearance.Compat.Notification" />

        </LinearLayout>


    </LinearLayout>
</androidx.cardview.widget.CardView>